Fix(v1): layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1856,7 +1856,7 @@ RESPONSIVE
     color: #d7edda;
 }
 
-@media (hover: none) and (pointer: coarse) and (max-width: 600px){
+@media (max-width: 767px) {
 	.member-row {
 		display: flex;
 		flex-wrap: wrap; 
@@ -1907,7 +1907,7 @@ RESPONSIVE
     }
 }
 
-@media (hover: none) and (pointer: coarse) and (max-width: 400px) {
+@media (max-width: 400px) {
     .member-row  .card-text {
         font-size: 9px;
     }
